add logic to prevent race condition

--- a/server/coingecko-api-fetch/package.json
+++ b/server/coingecko-api-fetch/package.json
@@ -1,5 +1,6 @@
 {
   "name": "coingecko-api",
+  "type": "module",
   "version": "1.0.10",
   "description": "A Node.js wrapper for the CoinGecko API with no dependencies.",
   "main": "index.js",
